--- a/public/assets/css/site.css
+++ b/public/assets/css/site.css
@@ -12,6 +12,26 @@ body {
     font-family: 'Inter';
 }
 
+.input-group > .form-control {
+    padding-right: 42px;
+    z-index: 0;
+    border-top-right-radius: 0.25rem !important;
+    border-bottom-right-radius: 0.25rem !important;
+}
+
+.input-group > button {
+    position: absolute;
+    right: 0;
+    color: gray;
+    background-color: transparent;
+    border: 0;
+    z-index: 3;
+}
+
+.input-group > button:focus {
+    box-shadow: none;
+}
+
 .connect-account {
     background: linear-gradient(to left, #7b4397, #dc2430);
     border: none;
@@ -39,4 +59,40 @@ a, a:hover {
 
 .h-separator {
     height: 6rem;
+}
+
+.result-link, .result-link:hover {
+    text-decoration: unset;
+    color: unset;
+}
+
+.result-link > .card:hover {
+    background-color: rgb(237 20 61 / 0.1);
+}
+
+.truncate-text {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.spinner-wrapper {
+    padding: 1.5rem;
+}
+
+.spinner {
+    position: relative;
+    border: 4px solid rgb(195 9 44 / 0.4);
+    border-top-color: crimson;
+    border-radius: 50%;
+    margin: 0 auto;
+    width: 3em;
+    height: 3em;
+    animation: spin 1s linear infinite;
+}
+  
+@keyframes spin {
+    to {
+        transform: rotate(360deg);
+    }
 }
