Aparecen las 4 últimas búsquedas de usuarios (también se pueden eliminar una a una). Creada la pantalla de error 404.

--- a/public/assets/css/site.css
+++ b/public/assets/css/site.css
@@ -91,6 +91,10 @@ a, a:hover {
     background-color: rgb(237 20 61 / 0.2);
 }
 
+.result-link i {
+    color: crimson;
+}
+
 .truncate-text {
     white-space: nowrap;
     overflow: hidden;
