--- a/public/assets/css/site.css
+++ b/public/assets/css/site.css
@@ -22,6 +22,7 @@ body {
 .input-group > button {
     position: absolute;
     right: 0;
+    height: 100%;
     color: gray;
     background-color: transparent;
     border: 0;
@@ -35,6 +36,10 @@ body {
 .connect-account {
     background: linear-gradient(to left, #7b4397, #dc2430);
     border: none;
+}
+
+.form-control {
+    border-color: rgba(220, 36, 48, 0.5);
 }
 
 .form-control:focus {
@@ -59,6 +64,10 @@ a, a:hover {
 
 .h-separator {
     height: 6rem;
+}
+
+.card {
+    border: 1px solid rgb(237 20 61 / 0.4);
 }
 
 .recent-searches-wrapper {
