--- a/public/assets/css/site.css
+++ b/public/assets/css/site.css
@@ -179,6 +179,7 @@ a, a:hover {
     position: relative;
     text-align: center;
     overflow: hidden;
+    cursor: pointer;
     margin-right: 0.25rem;
     margin-bottom: 0.25rem;
 }
@@ -250,7 +251,7 @@ a, a:hover {
   right: 0;
   bottom: 0;
   background-color: rgba(255,255,255,0.9);
-  overflow-y: scroll;
+  /* overflow-y: scroll; */
   z-index: 2;
   animation-name: slideUp;
   animation-duration: 0.5s;
@@ -274,16 +275,7 @@ a, a:hover {
     vertical-align: middle;
 }
 
-/* #view_content {
-  animation-name: slideUp;
-  animation-duration: 1s;
-  animation-iteration-count: 1;
-  -webkit-animation-name: slideUp;
-  -webkit-animation-duration: 1s;
-  -webkit-animation-iteration-count: 1;
-} */
-
-.view-content-close {
+.view-bar-close {
     background: transparent;
     border: 1px solid transparent;
     vertical-align: middle;
@@ -291,43 +283,104 @@ a, a:hover {
     transition: border-color 0.15s ease-in-out;
 }
 
-.view-content-close:hover {
+.view-bar-close:hover {
     border: 1px solid black;
 }
 
-.view-content-image {
-    max-width: 100%;
-    max-height: 100%;
+#view_content {
+    height: calc(100% - 56px);
 }
 
-#view_description > div {
-    padding: 0 0.5rem;
-}
-
-#view_description p {
+#view_content p {
     white-space: pre-wrap;
 }
 
+.view-content-image, #view_description {
+    max-width: 100%;
+    max-height: 100%;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    width: 100%;
+    height: auto;    
+}
+
+/* img[class*="pic"] {
+    animation: fade 3s infinite;
+} */
+
+#view_description {
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
 .publication-date {
-    text-align: center;
     text-transform: uppercase;
+}
+
+#view_comments span, #view_comments p {
     font-size: 0.9rem;
 }
 
-.publication-date > span {
-    background-color: white;
-    border-radius: 1rem;
-    padding-right: 1rem;
-    padding-left: 1rem;
-    margin-top: 3rem;
-    border: 1px solid #d4d3d3;
+#view_comments a {
+    color: inherit;
+    text-decoration: none;
 }
 
-.view-description {
-    background-color: white;
-    border-radius: 0.5rem;
-    padding: 0.5rem;
-    border: 1px solid #d4d3d3;
+.gallery-arrow {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    z-index: 1;
+    margin: auto;
+    font-weight: bold;
+    font-size: 4rem;
+    color: white;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+    height: intrinsic;
+    height: -moz-max-content;
+    height: -webkit-max-content;
+    height: max-content;
+    opacity: 0.9;
+}
+
+.gallery-arrow.left {
+    left: 0;
+}
+
+.gallery-arrow.right {
+    right: 0;
+}
+
+.gallery-arrow:hover {
+    color: white;
+}
+
+.gallery-switch-buttons {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    text-align: center;
+    margin: auto;
+    z-index: 1;
+}
+
+.gallery-switch-buttons > button {
+    font-size: 1.5rem;
+    color: white;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+}
+
+.gallery-switch-buttons > .btn.active {
+    color: crimson;
+}
+
+.gallery-switch-buttons > .btn:focus {
+    box-shadow: unset;
 }
 
 .spinner-wrapper {
