--- a/public/assets/css/site.css
+++ b/public/assets/css/site.css
@@ -94,6 +94,24 @@ a, a:hover {
     padding: 0.28rem 0.5rem;
 }
 
+.recent-searches-wrapper > :nth-child(even) {
+    padding-right: 0.25rem;
+}
+
+.recent-searches-wrapper > :not(:first-child):nth-child(odd) {
+    padding-left: 0.25rem;
+}
+
+@media (min-width: 768px) {
+    .recent-searches-wrapper > :nth-child(3) {
+        padding-right: 0.25rem;
+    }
+
+    .recent-searches-wrapper > :nth-child(4) {
+        padding-left: 0.25rem;
+    }
+}
+
 .result-link, .result-link:hover {
     text-decoration: unset;
     color: unset;
@@ -288,7 +306,7 @@ a, a:hover {
 }
 
 #view_content {
-    height: calc(100% - 56px);
+    height: calc(100% - 40.58px);
     overflow-y: auto;
 }
 
@@ -374,6 +392,7 @@ a, a:hover {
     font-size: 1.5rem;
     color: white;
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+    padding: 0 0.5rem;
 }
 
 .gallery-switch-buttons > .btn.active {
